loopfor.LoopCourseForest.scala.error
Erreur de compilation :
LoopCourseForest:3: error: '<-' expected but ')' found.
    for(compt<1 to 4)
                    ^LoopCourseForest:23: error: illegal start of simple expression
  } 
  ^