loopfor.LoopCourseForest.scala.code
for(compteur<-1 to 10; alle<-1 to 4)
	{
    for(compt<1 to 4)
    	{
        avance()
      }
    gauche()
    avance()
    avance()
    droite()
    for(compt<-1 to 4)
    	{
        avance()
      }
    droite()
    avance()
    avance()
    gauche()
    for(compt<-1 to 4)
    	{
        avance()
      }
  }